# jm_pkgs

./: README.md  pyproject_0.toml  pyproject_1.toml  pyproject_full.toml
jm_utils/: pyproject.toml
jm_utils/jm_utils/: jm_datetime.py  jm_logger.py  jm_pandas.py  jm_pdaccessor.py  jm_pmcore.py  jm_richprt.py
jm_utils/jm_utils.egg-info/: PKG-INFO  SOURCES.txt
jm_utils/src/jm_utils/: __init__.py  jm_environtment.py  jm_logger.py  jm_pdaccessor.py
jm_utils/src/jm_utils.egg-info/: PKG-INFO  SOURCES.txt
